--- a/lifeapp.html
+++ b/lifeapp.html
@@ -512,7 +512,7 @@ input[type="range"]::-webkit-slider-thumb{-webkit-appearance:none;width:16px;hei
 
 <!-- CARD GAME SECTION -->
 <section class="section forge-section" id="sec-cardgame">
-  <iframe id="forge-iframe" src="https://yourmessagesir.github.io/Chronicle/forge.html" style="position:fixed;inset:0;width:100%;height:100%;border:none;z-index:50;display:none;" allow="fullscreen" loading="lazy"></iframe>
+  <iframe id="forge-iframe" src="https://yourmessagesir.github.io/Chronicle/forge.html" style="position:fixed;top:0;left:0;right:0;bottom:calc(60px + env(safe-area-inset-bottom,0px));width:100%;height:calc(100% - 60px - env(safe-area-inset-bottom,0px));border:none;z-index:50;display:none;" allow="fullscreen" loading="lazy"></iframe>
   <div id="forge-placeholder" style="display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:60vh;gap:16px;text-align:center;">
     <div style="font-size:48px;">⚔</div>
     <div style="font-family:'Cinzel',serif;font-size:18px;color:var(--gold);">Forge</div>
