--- a/forge.html
+++ b/forge.html
@@ -2565,8 +2565,8 @@ if('serviceWorker' in navigator){
         const nw=r.installing;
         nw.addEventListener('statechange',()=>{
           if(nw.state==='installed'&&navigator.serviceWorker.controller){
-            // Silently reload to apply updates — no prompt
-            window.location.reload();
+            // Update cached silently — no prompt, no forced reload
+            console.log('Forge: update cached, applies on next open.');
           }
         });
       });
