--- a/forge.html
+++ b/forge.html
@@ -1272,8 +1272,14 @@ if('serviceWorker' in navigator){
       r.addEventListener('updatefound',()=>{
         const nw=r.installing;
         nw.addEventListener('statechange',()=>{
-          if(nw.state==='installed'&&navigator.serviceWorker.controller){
-            if(confirm('Card Forge has been updated. Reload now?'))window.location.reload();
+          if(nw.state==='installed'&&navigator.serviceWorker.controller&&!sessionStorage.getItem('_forgeSwPrompted')){
+            sessionStorage.setItem('_forgeSwPrompted','1');
+            const banner=document.createElement('div');
+            banner.style.cssText='position:fixed;top:0;left:0;right:0;z-index:99999;background:#141720;border-bottom:1px solid #c9a84c;padding:10px 16px;display:flex;align-items:center;gap:12px;font-family:Cinzel,serif;font-size:12px;color:#e8c96a;';
+            banner.innerHTML='<span style="flex:1">Card Forge updated — reload for latest version.</span>'
+              +'<button onclick="window.location.reload()" style="background:#c9a84c;color:#1a1400;border:none;padding:5px 14px;border-radius:4px;font-family:Cinzel,serif;font-size:11px;cursor:pointer;font-weight:700;">RELOAD</button>'
+              +'<button onclick="this.parentElement.remove()" style="background:none;border:none;color:#8a8878;font-size:16px;cursor:pointer;padding:0 4px;">&#x2715;</button>';
+            document.body.appendChild(banner);
           }
         });
       });
